test/bad/fby_arity.ept
node f()
returns (o : int)
let
	o = 1 fby<<1, 2>> o + 1
tel
